syntax = "proto3";
package imsg;
import "s9/msg/msg.proto";
import "github.com/AsynkronIT/protoactor-go/actor/protos.proto";

message AABB {
	float minx = 1;
	float maxx = 2;
	float miny = 3;
	float maxy = 4;
}

message Cell {
	AABB border = 1;
	AABB switch_border = 2;
}


message Entity {
	msg.PlayerData data = 1;
	actor.PID agentPID = 2;
}

message EnterSceneReq {
	int32 id = 1;
}

message ExitSceneReq {
	int32 id = 1;
	Entity entity = 2;
}

message SwitchCellReq {
	Entity entity = 1;
}

message SwitchCellRep {
	int32 id = 1;
}

message AuthReq {
	string account = 1;
}

message AuthRep {
	int32 id = 1;
}
