syntax = "proto3";
package msg;
//import "github.com/AsynkronIT/protoactor-go/actor/protos.proto";

message Vector2 {
	float x = 1;
	float y = 2;
}

message AABB {
	float minx = 1;
	float maxx = 2;
	float miny = 3;
	float maxy = 4;
}

message Cell {
	string name = 1;
	AABB border = 2;
	AABB switch_border = 3;
}

message PlayerData {
	int32 id = 1;
	Vector2 pos = 2;
	Vector2 vel = 3;
}

message CLogin {
	string account = 1;
}

message CUpdate {
	PlayerData data = 1;
}


message SEnterCell {
	PlayerData self = 1;
	Cell cell = 2;
}

message SLeaveCell {
	string cell_name = 1;
}


message SAdd {
	repeated PlayerData data = 1;
}

message SRemove {
	repeated int32 id = 1;
}

message SUpdate {
	PlayerData data = 1;
}

